[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathcourse-sdk"
version = "0.3.4"
description = "Pay-per-inference billing in USDC on Base L2 via x402. No accounts required."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["llm", "ai", "pathcourse", "gateway", "agents", "x402", "a2a", "agent-payment", "agent-identity", "agent-memory", "path-score", "cert-registry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "respx>=0.20"]

[project.urls]
Homepage = "https://pathcoursehealth.com"
Documentation = "https://gateway.pathcoursehealth.com/docs"
Repository = "https://github.com/pathcourse-health/pathcourse-sdk"
"Bug Tracker" = "https://github.com/pathcourse-health/pathcourse-sdk/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pathcourse*"]
